Feat: server-side health check added (WP: clientside)

--- a/scripts/dev-compose/docker-compose.yml
+++ b/scripts/dev-compose/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       NODE_ENV: development
       AUTH_CALLBACK_URL: /auth/callback
       PORT: 80
-      SHRAGA_URL: https://shraga-prod.northeurope.cloudapp.azure.com
+      SHRAGA_URL: https://shraga.shraga.branch-yesodot.org
       CLIENT_URL: http://client-nginx:3000
       REDIS_URL: "redis://redis:6379"
       RABBITMQ_URL: "amqp://rabbitmq:5672"
